5_app-deployment/pajauta-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pajauta-service
  namespace: pajauta-namespace
spec:
  type: ClusterIP
  selector:
    app: pajauta-label
  ports:
    - protocol: TCP
      port: 80               
      targetPort: 80
